--- a/dubbo-demo/pom.xml
+++ b/dubbo-demo/pom.xml
@@ -39,6 +39,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>3.3.3</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-bom</artifactId>
                 <version>${project.parent.version}</version>
